--- a/TREM.Electron/css/setting.css
+++ b/TREM.Electron/css/setting.css
@@ -327,8 +327,39 @@ body.settingDisabled .control-title, body.settingDisabled .option-label {
 .left {
     width: 90%;
 }
+
 .right {
     width: 10%;
+}
+
+.exptechlogin {
+    width: 100%;
+    display: flex;
+}
+.exptechlogin .left {
+    width: 80%;
+}
+
+.exptechlogin .right {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    margin-right: 0px;
+}
+
+.exptechlogin .right-inner {
+    display: flex;
+    align-items: center;
+}
+
+.exptechlogin .right-inner label {
+    margin-right: 20px;
+    margin-left: 0px;
+}
+
+.exptechlogin .right-inner button span {
+    padding-left: 0px;
+    padding-right: 8px;
 }
 
 .option-label {
