--- a/TREM.Electron/Views/RTSView.html
+++ b/TREM.Electron/Views/RTSView.html
@@ -41,6 +41,8 @@
                 <div id="wave-4"></div>
                 <div id="wave-5"></div>
                 <div id="wave-6"></div>
+                <div id="wave-7"></div>
+                <div id="wave-8"></div>
             </div>
         </div>
         <script src="../js/theme.js"></script>
