--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -3441,7 +3441,7 @@
                                                 <span lang="zh-TW">電子郵件</span>
                                                 <span class="option-label-id">exptech.email</span>
                                             </div>
-                                            <div class="option-label-description">沒有去exptech申請電子郵件嗎?<a onclick="openURL('https:\/\/api.exptech.com.tw/file/exptech/login.html')">點我前往申請</a></div>
+                                            <div class="option-label-description">沒有去exptech申請電子郵件嗎?<a onclick="openURL('https:\/\/exptech.com.tw/register')">點我前往申請</a></div>
                                         </div>
                                         <div class="exptechlogin">
                                             <div class="left">
