--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -663,7 +663,7 @@
                                                 <span lang="kr">?</span>
                                                 <span lang="ru">?</span>
                                                 <span lang="zh-CN">?</span>
-                                                <span lang="zh-TW">顯示 TREM EEW 地震波(進階用戶有效)。</span>
+                                                <span lang="zh-TW">顯示 TREM EEW 地震波(特定用戶有效)。</span>
                                             </span>
                                         </div>
                                         <label class="md3 switch">
@@ -793,14 +793,14 @@
                                             </span>
                                         </label>
                                     </div>
-                                    <div class="option-container">
+                                    <!-- <div class="option-container">
                                         <div class="option-label">
                                             <span class="option-label-title">
                                                 <span lang="en">Receive Earthquake Information</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
-                                                <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                                <span lang="ru">?</span>
+                                                <span lang="zh-CN">?</span>
                                                 <span lang="zh-TW">接收地震資訊</span>
 
                                                 <span class="option-label-id">report.getInfo</span>
@@ -809,9 +809,9 @@
                                                 <span lang="en">Receive earthquake information (valid for advanced users).</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
-                                                <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-TW">接收地震資訊(進階用戶有效)。</span>
+                                                <span lang="ru">?</span>
+                                                <span lang="zh-CN">?</span>
+                                                <span lang="zh-TW">接收地震資訊(特定用戶有效)。</span>
                                             </span>
                                         </div>
                                         <label class="md3 switch">
@@ -820,7 +820,7 @@
                                                 <span class="material-symbols-rounded icon">done</span>
                                             </span>
                                         </label>
-                                    </div>
+                                    </div> -->
                                     <div class="option-container">
                                         <div class="option-label">
                                             <span class="option-label-title">
@@ -977,14 +977,14 @@
                                             </span>
                                         </label>
                                     </div>
-                                    <div class="option-container">
+                                    <!-- <div class="option-container">
                                         <div class="option-label">
                                             <span class="option-label-title">
                                                 <span lang="en">Real-time station alert</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
-                                                <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                                <span lang="ru">?</span>
+                                                <span lang="zh-CN">?</span>
                                                 <span lang="zh-TW">顯示測站反應</span>
                                                 <span class="option-label-id">Real-time.alert</span>
                                             </span>
@@ -992,9 +992,9 @@
                                                 <span lang="en">The real-time station alert to display in the overlay (valid for advanced users).</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
-                                                <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-TW">顯示在地圖上的即時測站反應(進階用戶有效)。</span>
+                                                <span lang="ru">?</span>
+                                                <span lang="zh-CN">?</span>
+                                                <span lang="zh-TW">顯示在地圖上的即時測站反應(特定用戶有效)。</span>
                                             </span>
                                         </div>
                                         <label class="md3 switch">
@@ -1003,34 +1003,7 @@
                                                 <span class="material-symbols-rounded icon">done</span>
                                             </span>
                                         </label>
-                                    </div>
-                                    <div class="option-container">
-                                        <div class="option-label">
-                                            <span class="option-label-title">
-                                                <span lang="en">Real-time station local information</span>
-                                                <span lang="ja">?</span>
-                                                <span lang="kr">?</span>
-                                                <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-TW">讀取本地測站資料</span>
-                                                <span class="option-label-id">Real-time.local</span>
-                                            </span>
-                                            <span class="option-label-description">
-                                                <span lang="en">Real-time station local information and display real-time stations on the map.</span>
-                                                <span lang="ja">?</span>
-                                                <span lang="kr">?</span>
-                                                <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-TW">讀取本地測站資料顯示在地圖上的即時測站。</span>
-                                            </span>
-                                        </div>
-                                        <label class="md3 switch">
-                                            <input type="checkbox" id="Real-time.local" onclick="CheckSave('Real-time.local')">
-                                            <span class="slider">
-                                                <span class="material-symbols-rounded icon">done</span>
-                                            </span>
-                                        </label>
-                                    </div>
+                                    </div> -->
                                     <div class="option-container">
                                         <div class="option-label">
                                             <span class="option-label-title">
@@ -4062,6 +4035,33 @@
                                             </span>
                                         </button>
                                     </div>
+                                </div>
+                                <div class="option-container">
+                                    <div class="option-label">
+                                        <span class="option-label-title">
+                                            <span lang="en">Real-time station local information</span>
+                                            <span lang="ja">?</span>
+                                            <span lang="kr">?</span>
+                                            <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="zh-TW">讀取本地測站資料</span>
+                                            <span class="option-label-id">Real-time.local</span>
+                                        </span>
+                                        <span class="option-label-description">
+                                            <span lang="en">Real-time station local information and display real-time stations on the map.</span>
+                                            <span lang="ja">?</span>
+                                            <span lang="kr">?</span>
+                                            <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="zh-TW">讀取本地測站資料顯示在地圖上的即時測站。</span>
+                                        </span>
+                                    </div>
+                                    <label class="md3 switch">
+                                        <input type="checkbox" id="Real-time.local" onclick="CheckSave('Real-time.local')">
+                                        <span class="slider">
+                                            <span class="material-symbols-rounded icon">done</span>
+                                        </span>
+                                    </label>
                                 </div>
                                 <!-- <div class="control-title">
                                     <div>
