--- a/TREM.Electron/Views/RTSView.html
+++ b/TREM.Electron/Views/RTSView.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW" xml:lang="zh-TW">
     <head>
         <title>rts波形圖</title>
         <meta charset="utf-8" />
