--- a/TREM.Electron/Views/IntensityView.html
+++ b/TREM.Electron/Views/IntensityView.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW" xml:lang="zh-TW">
     <head>
+        <title>TREMV 臺灣即時地震監測變體 - 震度速報</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
