--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW" xml:lang="zh-TW">
     <head>
+        <title>TREMV 臺灣即時地震監測變體 - 設定</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="../css/setting.css" />
