--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="zh-TW" xml:lang="zh-TW">
     <head>
         <title>TREMV 臺灣即時地震監測變體</title>
