--- a/TREM.Electron/Views/IntensityView.html
+++ b/TREM.Electron/Views/IntensityView.html
@@ -224,7 +224,7 @@
                                                 <span lang="zh-TW">查詢</span>
                                             </div>
                                         </label>
-                                        <label for="intensity" id="old-database-label-search-value" class="chip filter label md3-ripple"><div></div></label>
+                                        <span id="old-database-label-search-value"></span>
                                         <br>
                                         <label for="intensity" id="old-database-label-date" class="chip filter label md3-ripple">
                                             <div class="offoutline">
